--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "3.5-dev"
   - "nightly"
 install:
-  - pip install -r dev-requirements.txt
+  - pip install -U pytest
+  - pip install -U pytest-runner
   - pip install -U coverage
   - pip install -U coveralls
 script:
