--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.0
 attrs==16.3.0
 Automat==0.5.0
+beautifulsoup4==4.5.3
 cffi==1.9.1
 constantly==15.1.0
 cryptography==1.7.2
@@ -10,14 +11,16 @@ incremental==16.10.1
 lxml==3.7.2
 packaging==16.8
 parsel==1.1.0
+py==1.4.32
 pyasn1==0.2.2
 pyasn1-modules==0.0.8
 pycparser==2.17
 PyDispatcher==2.0.5
 pyOpenSSL==16.2.0
 pyparsing==2.1.10
+pytest==3.0.6
 queuelib==1.4.2
-Scrapy==1.3.1
+Scrapy==1.3.2
 service-identity==16.0.0
 six==1.10.0
 Twisted==17.1.0
