--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.5-dev"
   - "nightly"
 install:
+  - pip install -r requirements.txt
   - pip install -U pytest
   - pip install -U pytest-runner
   - pip install -U coverage
