--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ pyasn1==0.2.2
 pyasn1-modules==0.0.8
 pycparser==2.17
 PyDispatcher==2.0.5
+pymongo==3.4.0
 pyOpenSSL==16.2.0
 pyparsing==2.1.10
-pytest==3.0.6
 queuelib==1.4.2
 Scrapy==1.3.2
 service-identity==16.0.0
