--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "mongo_connection_string": "mongodb://localhost:27017"
+  "mongo_connection_string": "mongodb://localhost:27017",
+  "db_name": "scrapytest"
 }
