added database with conditional test data initialization. added psutil for database process service check. added mongodb service to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python:
   - "3.5"
   - "3.5-dev"
   - "nightly"
+services: mongodb
+env:
+  - ENV=dev
 install:
   - pip install -r requirements.txt
   - pip install -U pytest
