--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install -r requirements.txt
   - pip install -U pytest
   - pip install -U pytest-runner
+  - pip install -U psutil
   - pip install -U coverage
   - pip install -U coveralls
 script:
