--- a/config.json
+++ b/config.json
@@ -2,5 +2,10 @@
   "mongo_connection_string": "mongodb://localhost:27017",
   "db_name": "scrapytest",
   "load_test_data": false,
-  "test_data_file": "tests/test_data.json"
+  "test_data_file": "tests/test_data.json",
+  "crawler_user_agent": "Kiran Koduru (+http://coderatchet.github.io",
+  "guardian_spider": {
+    "host": "theguardian.com.au",
+    "collection_paths": ["/news", "/sport", "/opinion", "/community", "/life-style", "/entertainment"]
+  }
 }
