added basic spider with a test runner

--- a/config.json
+++ b/config.json
@@ -3,9 +3,12 @@
   "db_name": "scrapytest",
   "load_test_data": false,
   "test_data_file": "tests/test_data.json",
-  "crawler_user_agent": "Kiran Koduru (+http://coderatchet.github.io",
+  "crawler_user_agent": "Jared Nagle (+http://github.com/coderatchet)",
   "guardian_spider": {
     "host": "theguardian.com.au",
-    "collection_paths": ["/news", "/sport", "/opinion", "/community", "/life-style", "/entertainment"]
+    "collection_paths": ["/news", "/sport", "/opinion", "/community", "/life-style", "/entertainment"],
+    "article_list_item_link_selector": ".article-listings-default article header a::attr(href)",
+    "next_page_selector": ".pager .next a::attr(href)",
+    "max_depth": 10
   }
 }
