--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-mongoengine
 appdirs==1.4.0
 attrs==16.3.0
 Automat==0.5.0
-beautifulsoup4==4.5.3
 cffi==1.9.1
 constantly==15.1.0
 cryptography==1.7.2
@@ -10,9 +8,9 @@ cssselect==1.0.1
 idna==2.2
 incremental==16.10.1
 lxml==3.7.2
+mongoengine==0.11.0
 packaging==16.8
 parsel==1.1.0
-py==1.4.32
 pyasn1==0.2.2
 pyasn1-modules==0.0.8
 pycparser==2.17
